# calendar-bot

./: .gitignore  Dockerfile  EVENTS_DIGEST.md  PROJECT_CONTEXT.md  bot.py  docker-compose.yml  generate_key.py  main.py  opensearch-init.sh  pyproject.toml  redis_pool.py  routes.py  settings.py  system.py  uvicorn_config.json  vector.toml
.github/workflows/: publish-image.yml
app/: bot.py  constant.py  database.py  di.py  dtos.py  ioc.py  main.py  redis_pool.py  routes.py  schemas.py  settings.py  system.py
app/adapters/: db.py  email.py  events.py  get_stream.py  shortener.py  sql.py
app/clients/: base_client.py  exceptions.py  models.py
app/clients/postal_client/: __init__.py  client.py  exceptions.py
app/clients/postal_client/models/: __init__.py  common.py  requests.py  responses.py
app/clients/unisender_go_client/: __init__.py  client.py  exceptions.py
app/clients/unisender_go_client/models/: __init__.py  requests.py  responses.py
app/config/: logger.py
app/controllers/: booking.py  booking_constraints.py  cache.py  chat.py  email.py  mail.py  mail_webhook.py  meet.py  meet_notification_state.py  meet_webhook.py  meeting.py  notification.py  telegram.py
app/handlers/: __init__.py  messages.py
app/interfaces/: __init__.py  booking.py  booking_constraints.py  cache.py  chat.py  events.py  mail.py  meeting.py  notification.py  sql.py  telegram.py  url_shortener.py
app/services/: email.py  meeting.py  notification.py  telegram.py
app/templates/: base.html
app/templates/client/: booking_rejected.html  cancellation.html  confirmation.html  feedback.html  reminder.html  reschedule.html
app/templates/organizer/: cancellation.html  confirmation.html  reschedule.html
handlers/: messages.py
