[project]
name = "zhivaya-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.17.0",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
    "structlog>=25.1.0",
    "ujson>=5.10.0",
    "pytz>=2024.2",
    "databases>=0.9.0",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.1",
    "openai>=1.60.1",
    "nc-py-api>=0.19.0",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "ngrok>=1.4.0",
    "ruff>=0.9.3",
]

[tool.ruff]
exclude = [
    ".env",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
]
fix = true
unsafe-fixes = true
show-fixes = true
target-version = "py311"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "D1",
    "D203",
    "D213",
    "EM",
    "FA",
    "FBT",
    "G004",
    "INP001",
    "ISC001",
    "PLR",
    "RET501",
    "S311",
    "TRY003",
    "UP040",
    "PERF203",
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*.py" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN401",
    "PLR2004",
    "S101",
    "S311",
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder", "standard-library"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2
