[project]
name = "zhivaya-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.17.0",
    "aiosmtplib>=5.0.0",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "cryptography>=44.0.0",
    "dishka>=1.7.2",
    "fastapi>=0.115.7",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "nc-py-api>=0.19.0",
    "niquests>=3.16.1",
    "openai>=1.60.1",
    "postal-py>=0.0.5",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "pymongo>=4.16.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "redis>=5.2.1",
    "sentry-sdk[fastapi]>=2.48.0",
    "sqlalchemy>=2.0.46",
    "stream-chat>=4.29.0",
    "structlog>=25.1.0",
    "tenacity>=9.1.2",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff]
exclude = [
    ".env",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
]
fix = true
unsafe-fixes = true
show-fixes = true
target-version = "py311"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "D1",
    "D203",
    "D213",
    "EM",
    "FA",
    "FBT",
    "G004",
    "INP001",
    "ISC001",
    "PERF203",
    "PLR",
    "RET501",
    "RUF001",
    "S311",
    "TRY003",
    "UP040",
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*.py" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN401",
    "PLR2004",
    "S101",
    "S311",
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder", "standard-library"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2
